--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,7 +2,7 @@ name: Deploy to Firebase Hosting Production
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     name: Build
