--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -39,5 +39,6 @@ jobs:
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
+          projectId: rest-api-boilerplate
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
