--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -39,4 +39,5 @@ jobs:
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
-          projectId: boilerplate-project-dev
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN_STAGING }}
